--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,10 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     //compile(name: 'Engine-system-release-4.0.0', ext: 'aar')//依赖本地引擎
-    compile 'org.appcan:engine:+:systemRelease@aar'
+//    compile 'org.appcan:engine:+:systemRelease@aar'
     //依赖远程引擎
     compile(name: "uexFileMgr-debug", ext: 'aar')
+    compile(name: 'Engine-system-release', ext: 'aar')
 }
 
 android {
@@ -65,6 +66,7 @@ android {
 
         defaultConfig {
             minSdkVersion 14
+            targetSdkVersion 26
         }
     }
     compileOptions {
